force-app/main/default/objects/Int_achat__c/Int_achat__c.object-meta.xml
<CustomObject>
    <label>Int_Achat</label>
    <nameField>
        <label>Nom de Int</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Int_Achat</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>