force-app/main/default/objects/Int_achat__c/fields/CodeAffaire__c.field-meta.xml
<CustomField>
    <fullName>CodeAffaire__c</fullName>
    <label>CodeAffaire</label>
    <length>32</length>
    <type>Text</type>
</CustomField>