force-app/main/default/objects/Int_achat__c/fields/CodeCentre__c.field-meta.xml
<CustomField>
    <fullName>CodeCentre__c</fullName>
    <label>CodeCentre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>