force-app/main/default/objects/Int_achat__c/fields/Date_de_commande__c.field-meta.xml
<CustomField>
    <fullName>Date_de_commande__c</fullName>
    <label>Date de commande</label>
    <type>Date</type>
</CustomField>