force-app/main/default/objects/Int_achat__c/fields/Import_Status__c.field-meta.xml
<CustomField>
    <fullName>Import_Status__c</fullName>
    <label>Import Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Import_Status</valueSetName>
    </valueSet>
</CustomField>