force-app/main/default/objects/Int_achat__c/fields/lib_frn__c.field-meta.xml
<CustomField>
    <fullName>lib_frn__c</fullName>
    <label>lib_frn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>