force-app/main/default/objects/Int_achat__c/fields/mnt_frg__c.field-meta.xml
<CustomField>
    <fullName>mnt_frg__c</fullName>
    <label>mnt_frg</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>