force-app/main/default/objects/Int_achat__c/fields/Mtcommande__c.field-meta.xml
<CustomField>
    <fullName>Mtcommande__c</fullName>
    <label>Mtcommandé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>