force-app/main/default/objects/Int_achat__c/fields/MtCompatabilise__c.field-meta.xml
<CustomField>
    <fullName>MtCompatabilise__c</fullName>
    <label>MtCompatabilisé</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>