force-app/main/default/objects/Int_achat__c/fields/Name_ref_achat__c.field-meta.xml
<CustomField>
    <fullName>Name_ref_achat__c</fullName>
    <label>Name_ref_achat</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>