force-app/main/default/objects/Int_achat__c/fields/Num_cde__c.field-meta.xml
<CustomField>
    <fullName>Num_cde__c</fullName>
    <label>Num_cde</label>
    <length>255</length>
    <type>Text</type>
</CustomField>