force-app/main/default/objects/Int_achat__c/fields/Num_fac__c.field-meta.xml
<CustomField>
    <fullName>Num_fac__c</fullName>
    <label>Num_fac</label>
    <length>255</length>
    <type>Text</type>
</CustomField>