force-app/main/default/objects/Int_achat__c/fields/num_frn__c.field-meta.xml
<CustomField>
    <fullName>num_frn__c</fullName>
    <label>num_frn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>