force-app/main/default/objects/Int_achat__c/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine</label>
    <length>32</length>
    <type>Text</type>
</CustomField>