force-app/main/default/objects/Int_achat__c/fields/TypeDeDepense__c.field-meta.xml
<CustomField>
    <fullName>TypeDeDepense__c</fullName>
    <label>TypeDeDepense</label>
    <length>255</length>
    <type>Text</type>
</CustomField>