force-app/main/default/objects/Int_achat__c/fields/TypeOda__c.field-meta.xml
<CustomField>
    <fullName>TypeOda__c</fullName>
    <label>TypeOda</label>
    <length>255</length>
    <type>Text</type>
</CustomField>